--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ theme: jekyll-theme-cayman
 title: gym-pybullet-drones
 description: PyBullet-based Gym for single and multi-agent reinforcement learning with nano-quadcopters
 show_downloads: true
+
+github:
+  zip_url: https://github.com/JacopoPan/gym-pybullet-drones/archive/master.zip
+
