--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,5 @@ show_downloads: true
 
 github:
   zip_url: https://github.com/JacopoPan/gym-pybullet-drones/archive/master.zip
+  tar_url: https://github.com/JacopoPan/gym-pybullet-drones/tarball/master 
 
