ROS2 skeleton nodes

--- a/ros2/src/ros2_gym_pybullet_drones/package.xml
+++ b/ros2/src/ros2_gym_pybullet_drones/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>gym_pybullet_drones</name>
+  <name>ros2_gym_pybullet_drones</name>
   <version>0.0.1</version>
   <description>A ROS2 Python wrapper for gym-pybullet-drones</description>
   <maintainer email="jacopo.panerati@utoronto.ca">Jacopo Panerati</maintainer>
@@ -14,5 +14,7 @@
 
   <export>
     <build_type>ament_python</build_type>
+    <exec_depend>rclpy</exec_depend>
+    <exec_depend>std_msgs</exec_depend>
   </export>
 </package>
