Move examples to package. Added unit test script for build testing. Added bash file for building and testing package. Changed paths to be user controlled, results are not to be saved in package path.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ examples/test.py
 # NumPy saves and videos
 files/logs/*.npy
 files/videos/*.mp4
+results/
 
 # Learning results
 experiments/learning/results/save-*
