--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,27 @@
-- name: Publish package
-  if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-  uses: pypa/gh-action-pypi-publish@release/v1.5.0
-  with:
-    user: __token__
-    password: ${{ secrets.PYPI_API_TOKEN }}
+deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+    - name: Build package
+      run: bash build_project.sh
+    - name: pypi-publish
+      # You may pin to the exact commit or the version.
+      # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
+      uses: pypa/gh-action-pypi-publish@v1.5.0
+      with:
+        # PyPI user
+        user: __token__
+        # Password for your PyPI user or an access token
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        # The repository URL to use
+        repository_url: https://github.com/utiasDSL/gym-pybullet-drones
