--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,20 @@
-deploy:
+# This workflow will upload a Python Package using Twine when a release is created
+# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+name: Upload Python Package
+
+on: push
+
+permissions:
+  contents: read
+
+jobs:
+  deploy:
 
     runs-on: ubuntu-latest
 
@@ -17,7 +33,8 @@ deploy:
     - name: pypi-publish
       # You may pin to the exact commit or the version.
       # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
-      uses: pypa/gh-action-pypi-publish@v1.5.0
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1.5.0
       with:
         # PyPI user
         user: __token__
