--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pybullet = "^3.2"
 ray = "1.9"
 stable-baselines3 = "^1.5"
 scipy = "^1.8"
+tensorboard = "^2.9"
 
 [tool.poetry.dev-dependencies]
 
