--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,7 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  run_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,13 +26,29 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pytest
+    - name: Install package
+      run: |
+        pip install .
+    - name: Unit tests
+      run: |
+        python -m pytest tests/
+        rm -rf tmp/
+
+  deploy:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: run_tests
+
+    - name: Install dependencies
+      run: |
         pip install poetry
     - name: Build package
-      run: bash build_project.sh
+      run: |
+        rm -rf dist/
+        poetry build
     - name: pypi-publish
       # You may pin to the exact commit or the version.
-      # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         # PyPI user
