--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,6 @@ permissions:
 jobs:
   run_tests:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -36,10 +35,10 @@ jobs:
         rm -rf tmp/
 
   deploy:
+    needs: run_tests
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
-    needs: run_tests
-
+    steps:
     - name: Install dependencies
       run: |
         pip install poetry
