--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,17 @@ permissions:
   contents: read
 
 jobs:
-  # run_tests:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v3
-  #     with:
-  #       python-version: '3.8'
-  #   - name: Install dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
+  run_tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
   #       pip install pytest
   #   - name: Install package
   #     run: |
@@ -35,18 +35,20 @@ jobs:
   #       rm -rf tmp/
 
   deploy:
-    # needs: run_tests
+    needs: run_tests
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
     - name: Install dependencies
       run: |
         pip install poetry
+    - name: debug
+      run: |
+        ls 
+        ls ..
     - name: Build package
       run: |
         rm -rf dist/
-        ls
-        ls ../
         poetry build
     - name: pypi-publish
       # You may pin to the exact commit or the version.
