--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ matplotlib = "^3.5"
 cycler = "^0.10"
 gym = "^0.21"
 pybullet = "^3.2"
+torch = "1.11.0"
 "ray[rllib]" = "1.9"
 stable-baselines3 = "^1.5"
 scipy = "^1.8"
