--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ gym = "^0.21"
 pybullet = "^3.2"
 torch = "1.11.0"
 "ray[rllib]" = "1.9"
-stable-baselines3 = "^1.5"
+stable-baselines3 = "1.5.0"
 scipy = "^1.8"
 tensorboard = "^2.9"
 
