Removed Rllib imports from tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.8"
 numpy = "^1.24"
 scipy = "^1.10"
 matplotlib = "^3.7"
+pytest = "^7.3"
 pybullet = "^3.2.5"
 stable-baselines3 = "^1.8.0"
 torch = "^2.0.0"
