Generic gym requirement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pip = "^23.1"
-setuptools = "^67.6"
+setuptools = "65.6"
 numpy = "^1.24"
 scipy = "^1.10"
 matplotlib = "^3.7"
