--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ matplotlib = "^3.7"
 pytest = "^7.3"
 pybullet = "^3.2.5"
 stable-baselines3 = "^1.8.0"
+gymnasium = "^0.28"
 torch = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
