fix missing master branch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,5 @@ gymnasium = "^0.28"
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
