Reimplementation of the changes from PR 161

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ stable-baselines3 = "^2.0.0"
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
