waypoint tracking working

--- a/ros2/src/rrt_python/package.xml
+++ b/ros2/src/rrt_python/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>point_cloud_planner</name>
-  <version>0.1.0</version>
+  <name>rrt_python</name>  <!-- Make sure this matches your package -->
+  <version>0.0.0</version>
   <description>ROS2 Point Cloud Planner Node using RRT Path Finding</description>
 
-  <maintainer email="your_email@example.com">Your Name</maintainer>
+  <maintainer email="41.astiksrivastava@gmail.com">Astik Srivastava</maintainer>
   <license>Apache-2.0</license>
 
   <!-- ROS2 Dependencies -->
@@ -14,14 +14,16 @@
   <depend>geometry_msgs</depend>
   <depend>visualization_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>tf2_sensor_msgs</depend>
+  <depend>tf2_py</depend> <!-- Added tf2_py for Python tf2 bindings -->
 
   <!-- External Python Dependencies -->
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-scipy</exec_depend>
   <exec_depend>python3-pandas</exec_depend>
   <exec_depend>python3-matplotlib</exec_depend>
-  <exec_depend>python3-plotly</exec_depend>
 
+  <!-- Build dependencies -->
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- Additional information for users -->
