corridor finder rrt* working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,11 @@ numpy = "^1.22"
 Pillow = "^9.0"
 matplotlib = "^3.5"
 cycler = "^0.10"
-gym = "^0.21"
+gym = "0.23.0"
 pybullet = "^3.2"
 torch = "1.11.0"
-"ray[rllib]" = "1.9"
-stable-baselines3 = "1.5.0"
+"ray[rllib]" = "2.37.0"
+stable-baselines3 = "2.0.0"
 scipy = "^1.8"
 tensorboard = "^2.9"
 
