--- a/ros2/src/ros2_gym_pybullet_drones/package.xml
+++ b/ros2/src/ros2_gym_pybullet_drones/package.xml
@@ -7,6 +7,15 @@
   <maintainer email="jacopo.panerati@utoronto.ca">Jacopo Panerati</maintainer>
   <license>MIT License</license>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>rosidl_default_generators</build_depend>
+  <build_depend>rclpy</build_depend>
+  
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
@@ -14,7 +23,8 @@
 
   <export>
     <build_type>ament_python</build_type>
-    <exec_depend>rclpy</exec_depend>
-    <exec_depend>std_msgs</exec_depend>
   </export>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
 </package>
