c++ rrt_path finder parallel trajectory publishing

--- a/ros2/src/custom_interface_gym/CMakeLists.txt
+++ b/ros2/src/custom_interface_gym/CMakeLists.txt
@@ -16,7 +16,8 @@ find_package(geographic_msgs REQUIRED)
 # Define custom messages and services
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/UavControl.srv"  # Define your custom service file here
-  "msg/TrajMsg.msg"         # Define your custom message file here
+  "msg/TrajMsg.msg"
+  "msg/DesTrajectory.msg"         # Define your custom message file here
   DEPENDENCIES geometry_msgs std_msgs geographic_msgs  # Specify dependencies
 )
 
