--- a/ros2/src/rrt_path_finder/CMakeLists.txt
+++ b/ros2/src/rrt_path_finder/CMakeLists.txt
@@ -19,27 +19,29 @@ find_package(tf2_sensor_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 
-# Manually specify the path to custom_interface_gym if it’s not automatically found
-list(APPEND CMAKE_PREFIX_PATH /home/astik/gym-pybullet-drones/ros2/install/custom_interface_gym/share/custom_interface_gym/cmake)
+# Manually specify the path to custom_interface_gym
+list(APPEND CMAKE_PREFIX_PATH ${CMAKE_INSTALL_PREFIX}/custom_interface_gym/share/custom_interface_gym/cmake)
 find_package(custom_interface_gym REQUIRED)
 
 # Include directories
 include_directories(
   include
   ${PCL_INCLUDE_DIRS}
+  ${CMAKE_INSTALL_PREFIX}/custom_interface_gym/include
+  ${CMAKE_INSTALL_PREFIX}/custom_interface_gym/include/custom_interface_gym
 )
 
-# Add source files
-set(SOURCES
+# Add source files for rrt_node
+set(SOURCES_RRT_NODE
   src/corridor_finder.cpp
   src/kdtree.c
   src/rrt_node.cpp
 )
 
-# Declare the executable
-add_executable(rrt_node ${SOURCES})
+# Declare the executable for rrt_node
+add_executable(rrt_node ${SOURCES_RRT_NODE})
 
-# Link dependencies
+# Link dependencies for rrt_node
 ament_target_dependencies(rrt_node
   rclcpp
   nav_msgs
@@ -54,14 +56,43 @@ ament_target_dependencies(rrt_node
   custom_interface_gym
 )
 
-# Link the PCL libraries
+# Link the PCL libraries for rrt_node
 target_link_libraries(rrt_node ${PCL_LIBRARIES})
 
-# Ensure C++17 and C99 standards
+# Ensure C++17 and C99 standards for rrt_node
 target_compile_features(rrt_node PUBLIC c_std_99 cxx_std_17)
 
+# Add source files for trajectory_server
+set(SOURCES_TRAJECTORY_SERVER
+  src/trajectory_server.cpp
+)
+
+# Declare the executable for trajectory_server
+add_executable(trajectory_server ${SOURCES_TRAJECTORY_SERVER})
+
+# Link dependencies for trajectory_server (SAME AS rrt_node)
+ament_target_dependencies(trajectory_server
+  rclcpp
+  nav_msgs
+  sensor_msgs
+  visualization_msgs
+  pcl_conversions
+  PCL
+  tf2_ros
+  tf2_sensor_msgs
+  tf2_geometry_msgs
+  std_msgs
+  custom_interface_gym
+)
+
+# Link the PCL libraries for trajectory_server (SAME AS rrt_node)
+target_link_libraries(trajectory_server ${PCL_LIBRARIES})
+
+# Ensure C++17 and C99 standards for trajectory_server (SAME AS rrt_node)
+target_compile_features(trajectory_server PUBLIC c_std_99 cxx_std_17)
+
 # Install targets
-install(TARGETS rrt_node
+install(TARGETS rrt_node trajectory_server
   DESTINATION lib/${PROJECT_NAME}
 )
 
