--- a/ros2/src/custom_interface_gym/CMakeLists.txt
+++ b/ros2/src/custom_interface_gym/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(geographic_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/UavControl.srv"  # Define your custom service file here
   "msg/TrajMsg.msg"
+  "msg/DesTrajectoryNew.msg"
   "msg/DesTrajectory.msg"         # Define your custom message file here
   DEPENDENCIES geometry_msgs std_msgs geographic_msgs  # Specify dependencies
 )
