--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ transforms3d = "^0.4.1"
 matplotlib = "^3.7"
 pytest = "^7.3"
 pybullet = "^3.2.5"
-gymnasium = "^0.28"
+gymnasium = "~=0.28"
 stable-baselines3 = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
