--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = ">=7.3, <9.0"
 pybullet = "^3.2.5"
 gymnasium = "~=0.28"
 stable-baselines3 = "^2.0.0"
+control = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 
