--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+name: Test package
 
-name: Test package quality
-
-on: push
+on: 
+  push:
+    branches: [ main ] 
+  schedule:
+    - cron: '0 3 * * 6'
+  workflow_dispatch: {}
 
 permissions:
   contents: read
