--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "2.0.0"
 description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
 authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>"]
 license = "MIT"
-readme = "pypi_description.md"
+readme = "README.md"
 repository = "https://github.com/utiasDSL/gym-pybullet-drones"
 packages = [
     { include = "gym_pybullet_drones" }
